syntax = "proto3";
package shipping;

import "google/protobuf/timestamp.proto";

message ShippingProvider {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  optional google.protobuf.Timestamp discarded_at = 5;
}

message Shipping {
  string id = 1;
  string user_id = 2;
  string payment_id = 3;
  string shipping_provider_id = 4;
  google.protobuf.Timestamp created_at = 100;
  google.protobuf.Timestamp updated_at = 1002;
  optional google.protobuf.Timestamp discarded_at = 1003;
}
